--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="LlT-in-Vlk">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="LlT-in-Vlk" customClass="FeedImageCell" customModule="Prototype" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="66" width="393" height="580"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LlT-in-Vlk" id="Sx6-Tq-7sR">
@@ -108,6 +108,12 @@ Location</string>
                                         <constraint firstAttribute="trailingMargin" secondItem="E09-1I-dwR" secondAttribute="trailing" id="fcb-a9-BCY"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionlabel" destination="eV0-oy-aPn" id="gS3-Do-4qK"/>
+                                    <outlet property="feedImageView" destination="83J-Il-iJT" id="TOV-rI-0Kj"/>
+                                    <outlet property="locationContainer" destination="q5E-3g-RHo" id="EVj-5Y-UOZ"/>
+                                    <outlet property="locationLabel" destination="C54-Ho-ptI" id="t9g-DW-Vq0"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
